T_T :facepalm: Forgot to actually set the theme in the _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: Personal Notes, Tips & Tricks I tend to forget
 remote_theme: just-the-docs/just-the-docs
 
 
-color_scheme: dark
+color_scheme: kb_etho
 primary_color: "#FF0000"
 
 # Sidebar auto from folder structure
